// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Editor Snapshot Tests > matches snapshot when template is dirty 1`] = `
<div>
  <div
    class="editor-container"
    data-theme="dark"
    style="--zoom-level: 1;"
  >
    <div
      data-testid="toolbar"
    >
      Mock Toolbar
    </div>
    <div
      class="error-banner"
    >
      <span>
        Failed to initialize editor
      </span>
      <button>
        ×
      </button>
    </div>
    <div
      class="editor-layout"
    >
      <div
        class="editor-main"
        style="--sidebar-width: 250px;"
      >
        <div
          data-testid="craft-editor"
        >
          Mock CraftEditor
        </div>
      </div>
    </div>
    <div
      data-testid="status-bar"
    >
      Mock StatusBar
    </div>
    <style>
      
        .editor-container {
          --zoom-level: 1;
          display: flex;
          flex-direction: column;
          height: 100vh;
          background: var(--color-bg-primary);
          color: var(--color-text-primary);
        }

        .error-banner {
          display: flex;
          align-items: center;
          justify-content: space-between;
          padding: 0.75rem 1rem;
          background: var(--color-error);
          color: white;
          font-size: 0.875rem;
          border-bottom: 1px solid rgba(0, 0, 0, 0.1);
        }

        .error-banner button {
          background: none;
          border: none;
          color: white;
          font-size: 1.5rem;
          cursor: pointer;
          padding: 0;
          line-height: 1;
        }

        .error-banner button:hover {
          opacity: 0.8;
        }

        .editor-layout {
          display: flex;
          flex: 1;
          gap: 0;
          overflow: hidden;
        }

        .editor-main {
          flex: 1;
          display: flex;
          overflow: hidden;
        }

        .preview-panel {
          width: 400px;
          background: var(--color-bg-secondary);
          border-left: 1px solid var(--color-border);
          overflow-y: auto;
          display: flex;
          flex-direction: column;
        }

        @media (max-width: 1024px) {
          .preview-panel {
            width: 300px;
          }
        }
      
    </style>
  </div>
</div>
`;

exports[`Editor Snapshot Tests > matches snapshot with default state 1`] = `
<div>
  <div
    class="editor-container"
    data-theme="dark"
    style="--zoom-level: 1;"
  >
    <div
      data-testid="toolbar"
    >
      Mock Toolbar
    </div>
    <div
      class="error-banner"
    >
      <span>
        Failed to initialize editor
      </span>
      <button>
        ×
      </button>
    </div>
    <div
      class="editor-layout"
    >
      <div
        class="editor-main"
        style="--sidebar-width: 250px;"
      >
        <div
          data-testid="craft-editor"
        >
          Mock CraftEditor
        </div>
      </div>
    </div>
    <div
      data-testid="status-bar"
    >
      Mock StatusBar
    </div>
    <style>
      
        .editor-container {
          --zoom-level: 1;
          display: flex;
          flex-direction: column;
          height: 100vh;
          background: var(--color-bg-primary);
          color: var(--color-text-primary);
        }

        .error-banner {
          display: flex;
          align-items: center;
          justify-content: space-between;
          padding: 0.75rem 1rem;
          background: var(--color-error);
          color: white;
          font-size: 0.875rem;
          border-bottom: 1px solid rgba(0, 0, 0, 0.1);
        }

        .error-banner button {
          background: none;
          border: none;
          color: white;
          font-size: 1.5rem;
          cursor: pointer;
          padding: 0;
          line-height: 1;
        }

        .error-banner button:hover {
          opacity: 0.8;
        }

        .editor-layout {
          display: flex;
          flex: 1;
          gap: 0;
          overflow: hidden;
        }

        .editor-main {
          flex: 1;
          display: flex;
          overflow: hidden;
        }

        .preview-panel {
          width: 400px;
          background: var(--color-bg-secondary);
          border-left: 1px solid var(--color-border);
          overflow-y: auto;
          display: flex;
          flex-direction: column;
        }

        @media (max-width: 1024px) {
          .preview-panel {
            width: 300px;
          }
        }
      
    </style>
  </div>
</div>
`;

exports[`Editor Snapshot Tests > matches snapshot with light theme 1`] = `
<div>
  <div
    class="editor-container"
    data-theme="light"
    style="--zoom-level: 1;"
  >
    <div
      data-testid="toolbar"
    >
      Mock Toolbar
    </div>
    <div
      class="error-banner"
    >
      <span>
        Failed to initialize editor
      </span>
      <button>
        ×
      </button>
    </div>
    <div
      class="editor-layout"
    >
      <div
        class="editor-main"
        style="--sidebar-width: 250px;"
      >
        <div
          data-testid="craft-editor"
        >
          Mock CraftEditor
        </div>
      </div>
    </div>
    <div
      data-testid="status-bar"
    >
      Mock StatusBar
    </div>
    <style>
      
        .editor-container {
          --zoom-level: 1;
          display: flex;
          flex-direction: column;
          height: 100vh;
          background: var(--color-bg-primary);
          color: var(--color-text-primary);
        }

        .error-banner {
          display: flex;
          align-items: center;
          justify-content: space-between;
          padding: 0.75rem 1rem;
          background: var(--color-error);
          color: white;
          font-size: 0.875rem;
          border-bottom: 1px solid rgba(0, 0, 0, 0.1);
        }

        .error-banner button {
          background: none;
          border: none;
          color: white;
          font-size: 1.5rem;
          cursor: pointer;
          padding: 0;
          line-height: 1;
        }

        .error-banner button:hover {
          opacity: 0.8;
        }

        .editor-layout {
          display: flex;
          flex: 1;
          gap: 0;
          overflow: hidden;
        }

        .editor-main {
          flex: 1;
          display: flex;
          overflow: hidden;
        }

        .preview-panel {
          width: 400px;
          background: var(--color-bg-secondary);
          border-left: 1px solid var(--color-border);
          overflow-y: auto;
          display: flex;
          flex-direction: column;
        }

        @media (max-width: 1024px) {
          .preview-panel {
            width: 300px;
          }
        }
      
    </style>
  </div>
</div>
`;
